fix(ui): image preview stretch issue

--- a/components/ui/Chat/Image/Overlay/Overlay.less
+++ b/components/ui/Chat/Image/Overlay/Overlay.less
@@ -4,7 +4,8 @@
 
   .is-image-in-mask {
     &:extend(.round-corners);
-    height: 80vh;
+    max-height: 80vh;
+    height: auto;
     max-width: 80vw;
     justify-content: center;
     align-self: center;
